[project]
name = "agent-harness-examples"
version = "0.1.0"
description = "Examples for the agent-harness package"
requires-python = ">=3.11"
dependencies = [
    "agent-harness",
    "pydantic-ai",
    "beanie",
    "colorama"
]

[project.urls]
Repository = "https://github.com/myndfire/pydanticai-fluent"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources.agent-harness]
path = "../agent_harness"
editable = true