[project]
name = "agentic-rag"
version = "0.1.0"
description = "RAG agent example for the agent-harness package"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "beanie",
    "colorama",
    "python-dotenv",
    "aio-pika",
    "structlog",
    "jinja2",
    "pydantic-settings",
    "agent-harness",
]

[project.urls]
Repository = "https://github.com/myndfire/pydanticai-fluent"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources.agent-harness]
path = "../agent_harness"
editable = true
